# RankingAwareCLIP

./: .gitignore  README.md  demo.ipynb  pyproject.toml
configs/: model-config.json
examples/: AVA-split.json  Adience-split.json  HCI-split.json  example-count-df.csv  koniqa-split.json
learn_to_compare/: README.md  clip_model_adapter.py  utils.py
libs/open_clip/: MANIFEST.in  README.md
libs/open_clip/src/open_clip/: clip_model_adapter.py  coca_model.py  coca_model_adapter.py  custom_utils.py  factory.py  loss.py  model.py  modified_resnet.py  pretrained.py  transformer.py
libs/open_clip/src/open_clip/model_configs/: RN101-adapter.json  RN50-adapter.json  ViT-B-16-SigLIP-adapter.json  ViT-B-16-adapter.json  ViT-B-16-plus-adapter.json  ViT-B-32-adapter.json  ViT-L-14-336-adapter.json  ViT-L-14-adapter.json  convnext_base-adapter.json  convnext_base_w_224-adapter.json  convnext_base_w_320-adapter.json  convnext_large_d-adapter.json  convnext_large_d_320-adapter.json
libs/open_clip/src/training/: data.py  main.py  params.py  train.py
scripts/: inference.py  inference_cv.py
